# iitp-python

./: fasthough.py  mypy.ini  noxfile.py  pyproject.toml  test_hough.py
docs/: conf.py  index.rst
docs/_build/: index.html
src/fasthough/: __init__.py  console.py  draw_line.py  hough_transform.py  main.py  wikipedia.py
tests/: conftest.py  test_console.py  test_hough.py
