[tool.poetry]
name = "fasthough"
version = "0.1.0"
description = ""
authors = ["Yasin Mamedov <mamedov.iakh@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.0"
requests = "^2.31.0"
desert = "^2022.9.22"
marshmallow = "^3.21.2"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.4"
wikipedia = "^1.4.0"


[tool.poetry.scripts]
fasthough = "fasthough.console:main"



[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
coverage = {extras = ["toml"], version = "^7.5.1"}
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
mypy = "^1.10.0"
pytype = {version = "^2024.4.11", python = "3.7"}
typeguard = "^4.2.1"
flake8-annotations = "^3.1.0"
flake8-docstrings = "^1.7.0"
xdoctest = "^1.1.3"
darglint = "^1.8.1"
sphinx = "^7.3.7"
sphinx-autodoc-typehints = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python"]

[tool.coverage.report]
show_missing = true
